<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".AcercaDe">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/img_derechos"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/app_name"
            tools:srcCompat="@drawable/acercade" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/txt_derechos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/derechos"
            android:textAlignment="center"
            android:textColor="@color/com_facebook_button_text_color" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autor"
            android:textAlignment="center"
            android:textColor="@color/com_facebook_button_text_color" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>